# CSProblemSolvingandSolutionClass-FinalProject_rev2

./: Audio_Clap_AulaMagna.m4a  LICENSE  README.md  changelog.txt  cleaning_modeling.py  final_project_practice-1.py  main_file.py  project_controller.py  project_model.py  project_view.py  pyproject.toml
